--- a/style.css
+++ b/style.css
@@ -201,7 +201,7 @@ main{
 
 .wallpaper{
     width: 100%;
-    background: url(img/wallpaper4.webp);
+    background: url(img/wallpaper5.jpg);
     background-position: center center;
     background-size: cover;
     flex: 1;
